# t212_api_client_py

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
t212/: __init__.py  decorators.py  main.py
tests/: test_main.py
